Fixed font-size for links on download-page (wrong size with eg. Safari)

--- a/www/include/style.css
+++ b/www/include/style.css
@@ -280,6 +280,11 @@ margin-bottom: 0.5em;
 font-size: 0.9em;
 }
 
+#main_inner a
+{
+font-size: 0.9em;
+}
+
 #main_inner ul
 {
 margin-bottom: 2.0em;
